--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        rust-version: ['1.56']
+        rust-version: ['1.56.0']
 
     steps:
       - name: Checkout repository
@@ -27,11 +27,5 @@ jobs:
       - name: Run tests
         run: cargo test
 
-      - name: Publish macroses to crates.io
-        run: cd macros; cargo publish  --token ${{ secrets.CARGO_REGISTRY_TOKEN }}
-
-      - name: Navigate back
-        run: cd ..
-
-      - name: Publish DI to crates.io
+      - name: Publish New to crates.io
         run: cargo publish  --token ${{ secrets.CARGO_REGISTRY_TOKEN }}
