--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "inew"
-version = "0.2.1"
+version = "0.2.2"
 edition = "2021"
 authors = ["Borisenko Andrei m0hct3r@gmail.com"]
 readme = "README.md"
@@ -19,5 +19,8 @@ syn = { version = "1.0.109", features = ["full"] }
 quote = "1.0.23"
 proc-macro2 = "1.0.51"
 
-
+# no_std support https://github.com/nrc/derive-new
+[features]
+default = ["std"]
+std = []
 
