--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        rust-version: ['1.56.0']
+        rust-version: ['1.70.0', '1.75.0', 'stable']
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
