--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ proc-macro = true
 syn = { version = "2.0.117", features = ["full"] }
 quote = "1.0.44"
 proc-macro2 = "1.0.106"
+heck = "0.5.0"
 
 # no_std support https://github.com/nrc/derive-new
 [features]
