--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,3 +23,4 @@ jobs:
         run: |
           rustc --version && cargo --version
           cargo test --workspace
+          cargo test --workspace --no-default-features
