* add fail_crate to cargo workspace, but don't run tests on it

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,7 +20,9 @@ jobs:
           toolchain: ${{ matrix.rust-version }}
 
       - name: Run tests
-        run: cargo test --workspace
+        run: |
+          cargo test
+          cargo test --no-default-features
 
       - name: Publish INew to crates.io
         run: cargo publish --token ${{ secrets.CARGO_REGISTRY_TOKEN }}
